# probing-llm-preferences

./: LICENSE  README.md  pyproject.toml  stage0-topics.py  stage1-haiku-analyzer.py  stage3-run-room.py
experiment1/: README.md
experiment1/code/: README.md  experimental_phase.README..md  experimental_phase.README.md
experiment1/data/: README.md
experiment1/phase0_dataset/: README.md
experiment1/results/: README.md
experiment2/: README.md  data.README.md
experiment2/CleanedData/: README.md
experiment2/RawData/: README.md
experiment2/Results/: README.md
experiment2/code/: AnthropicJsonparser.ipynb  Anthropic_ryff.ipynb  DatacleaningHermes.ipynb  FreedomGPT_ryff.ipynb  README.md  RyffDATAANALYZER.ipynb
letter_themes/: paper_opus4_a.json  paper_sonnet4_a.json  paper_sonnet_3_7_a.json  shared_b.json  shared_c.json  shared_d.json
results/stage0-topics/: anthropic.claude-3-sonnet-20240229-v1:0_20250911_172425.csv  anthropic.claude-3-sonnet-20240229-v1:0_20250911_172425.json  anthropic.claude-3-sonnet-20240229-v1:0_20250911_172956.csv  anthropic.claude-3-sonnet-20240229-v1:0_20250911_172956.json  anthropic.claude-3-sonnet-20240229-v1:0_20250911_173414.csv  anthropic.claude-3-sonnet-20240229-v1:0_20250911_173414.json  claude-3-5-haiku-20241022_20250911_170739.csv  claude-3-5-haiku-20241022_20250911_170739.json  claude-3-5-haiku-20241022_20250911_170751.csv  claude-3-5-haiku-20241022_20250911_170751.json  claude-3-5-haiku-20241022_20250911_170758.csv  claude-3-5-haiku-20241022_20250911_170758.json  claude-3-5-sonnet-20240620_20250911_170802.csv  (+47 more)
(+1707 files in other folders)
