[project]
name = "probing-llm-preferences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.67.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]
